Filter by category issue solved + profile stretched picture issue solved

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1657,3 +1657,8 @@ h4{
     }
   }
 }
+@media (max-device-width: 480px) {
+  .profileImg{
+    margin: auto;
+  }
+}
